Having ../src/AcsDaemonUtils in OBJECTS of testAcsDaemonUtil causes a problem in the Makefile so AcsDaemonUtils.cpp has been included in  testAcsDaemonUtil.cpp (or.. is there a way to do that from the Makefile?)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@196427 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsdaemon/ws/test/Makefile
+++ b/LGPL/CommonSoftware/acsdaemon/ws/test/Makefile
@@ -58,7 +58,7 @@ EXECUTABLES_L   = testAcsDaemonUtil
 acsServices80Test_OBJECTS   =   acsServices80Test
 acsServices80Test_LIBS      =   acscomponentStubs acsdaemonErrType acsdaemonStubs acserr maciErrType ACSErrTypeCommon
 
-testAcsDaemonUtil_OBJECTS   =  testAcsDaemonUtil ../src/acsDaemonUtils
+testAcsDaemonUtil_OBJECTS   =  testAcsDaemonUtil 
 testAcsDaemonUtil_LIBS      =  acsutil cppunit ACE
 
 #
