Fix the build with ACS 12.2. It was for sure not working Rodrigo's change 2011-02-09 (r147743) when dao classes have been moved from laser-core into acsalarmidl.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@196751 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/alarmsDefGUI/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/alarmsDefGUI/src/project.properties
@@ -28,7 +28,7 @@ acs.jars.required  = \
   acserrj.jar \
   cdbErrType.jar \
   acsjlog.jar \
-  junit.jar \
+  junit-dep-4.10.jar \
   maci.jar \
   maciSchemaBindings.jar \
   logging_idl.jar \
@@ -43,7 +43,7 @@ acs.jars.required  = \
   cmwmom.jar \
   jms.jar \
   xercesImpl.jar \
-  commons-logging.jar \
+  commons-logging-1.1.1.jar \
   alarmsysteminterface.jar \
   log4j-1.2.15.jar  \
   CDB.jar \
