--- a/LGPL/CommonSoftware/acsGUIs/alarmsDefGUI/src/build.xml
+++ b/LGPL/CommonSoftware/acsGUIs/alarmsDefGUI/src/build.xml
@@ -11,7 +11,7 @@
 	<property name="buildDirectory" location="${project_loc}/object/headlessTemp"/>
 	<property file="build.properties" />
 	<property file="project.properties" />
-	<property name="pdeBuildPluginVersion" value="3.6.0.v20100603" />
+	<property name="pdeBuildPluginVersion" value="3.6.1.R36x_v20100823" />
 	<property name="equinoxLauncherPluginVersion" value="1.1.0.v20100507" />
 	<property name="eclipseLocation" value="${ALMASW_INSTDIR}/Eclipse/SDKandDeltaPack/eclipse" />
 
