Added a test for the filtering of alarms based on the value of the triplet
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@196800 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/alarm-clients/test/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/alarm-clients/test/Makefile
@@ -89,7 +89,8 @@ SCRIPTS         = clientTATPrologue \
                 testCategoryClientChildren \
                 testCategoryClientActiveChildren \
                 testUserProps \
-                testSrcDumper
+                testSrcDumper \
+                testAlarmCategoryFilter
 
 SCRIPTS_L       =
 
