Added a test for the AlarmStatistics (need to test more cases)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@196841 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/alarm-clients/test/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/alarm-clients/test/Makefile
@@ -90,7 +90,8 @@ SCRIPTS         = clientTATPrologue \
                 testCategoryClientActiveChildren \
                 testUserProps \
                 testSrcDumper \
-                testAlarmCategoryFilter
+                testAlarmCategoryFilter \
+                testAlarmStatistics
 
 SCRIPTS_L       =
 
