New test for the AlarmListenerContainer
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@196908 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/alarm-clients/test/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/alarm-clients/test/Makefile
@@ -91,7 +91,8 @@ SCRIPTS         = clientTATPrologue \
                 testUserProps \
                 testSrcDumper \
                 testAlarmCategoryFilter \
-                testAlarmStatistics
+                testAlarmStatistics \
+                testAlarmListenerContainer
 
 SCRIPTS_L       =
 
