Added a test for the AlarmCategoryClient (notification of statistics still pending)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@196913 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/alarm-clients/test/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/alarm-clients/test/Makefile
@@ -92,7 +92,8 @@ SCRIPTS         = clientTATPrologue \
                 testSrcDumper \
                 testAlarmCategoryFilter \
                 testAlarmStatistics \
-                testAlarmListenerContainer
+                testAlarmListenerContainer \
+                testAlarmCategoryClient
 
 SCRIPTS_L       =
 
