added test to investigate and test improvements for situation described in:"(ICT-1140) Can not create the second flow when DDSSenderFlowQoS is defined", so to create two streams/flows using same configuration parser.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@196999 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/bulkDataNT/test/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/test/Makefile
@@ -81,7 +81,7 @@ bdNT32SendersTest_OBJECTS = bdNT32SendersTest
 bdNT32SendersTest_LIBS = bulkDataNTSender
 
 bdNTMultiReceiversTest_OBJECTS = bdNTMultiReceiversTest
-bdNTMultiReceiversTest_LIBS= bulkDataNTReceiver
+bdNTMultiReceiversTest_LIBS= bulkDataNTReceiver 
 
 xxxxx_OBJECTS   =	
 xxxxx_LDFLAGS   =
@@ -100,7 +100,7 @@ INCLUDES        =
 # Libraries (public and local)
 # ----------------------------
 LIBRARIES       =
-LIBRARIES_L     = bdNTReceiverLibTest bdNTSenderLibTest bdNTSenderLibTestNew
+LIBRARIES_L     = bdNTReceiverLibTest bdNTSenderLibTest bdNTSenderLibTestNew bdNTMasterLibTest
 bdNTReceiverLibTest_OBJECTS = bdNTReceiverImplTest
 bdNTReceiverLibTest_LIBS = bulkDataNTReceiver bulkDataReceiverStubs baci
 
@@ -109,6 +109,10 @@ bdNTSenderLibTest_LIBS = bulkDataNTSenderImpl
 
 bdNTSenderLibTestNew_OBJECTS = bdNTSenderImplTestNew
 bdNTSenderLibTestNew_LIBS = bulkDataNTSenderImpl
+
+bdNTMasterLibTest_OBJECTS = bdNTMasterImplTest
+bdNTMasterLibTest_LIBS = bulkDataNTReceiver bulkDataReceiverStubs bulkDataNTSender baci
+
 
 #
 # <brief description of lllll library>
