Reverted back the support for nested IDL components(ICTJ:ICT-1685)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@197226 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acspy/test/Makefile
+++ b/LGPL/CommonSoftware/acspy/test/Makefile
@@ -51,8 +51,7 @@ PY_SCRIPTS_L =	test_Acspy_Nc_CommonNC \
 		acspyTestLoggingConsumer \
 		acspyTestSupplier \
 		acspyTestConsumer \
-		acspyTestQoSTimeout \
-		acspyTestNestedModules
+		acspyTestQoSTimeout 
 
 PY_PACKAGES = acspytestImpl acspyTestQoSImpl
 
