Ported module XmlIdl from using the obsolete OpenORB IDL parser to using JacORB's IDL parser, together with Joe@CTA. This allows the removal of OpenORB jars from ACS (ICTJ:ICT-1611). This commit covers both modules Tools/extjars and XmlIdl.
TODO: The javadoc and unit tests still need to be updated. IDL includes will have to be tested more. The acsMakefile will have to modify the options it sets, although currently XmlIdl implements translation from old to new options.

git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@197499 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/XmlIdl/src/Makefile
+++ b/LGPL/CommonSoftware/XmlIdl/src/Makefile
@@ -34,7 +34,7 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-SCRIPTS = xmlIdlCompiler
+SCRIPTS =
 # 
 # IDL Files and flags
 # 
@@ -45,10 +45,10 @@ USER_IDL =
 # Jarfiles and their directories
 #
 JARFILES = xmlidl 
-xmlidl_DIRS =  alma
+xmlidl_DIRS = alma org
 xmlidl_EXTRAS = 
 
-#INSTALL_FILES = ../lib/openorb13Debug.jar ../lib/logkit.jar ../lib/avalon-framework.jar
+INSTALL_FILES =
 
 #>>>>> END OF standard rules
 
