- Added a TAT test that unpacks all java sources from the IDL jar(s) that were generated by the Makefile,   so that their concatenated content gets compared to a reference file.   This exercises the call from acsMakefile to XmlIdl and ensures we generate correct code   (especially w/o name clashes with the standard JacORB IDL build). - Added the dummy xml binding classes as a fixed jar because they must be available when IDL gets built,   which I believe the Makefile always does before turning to "JARFILES".   Note that module acsTestEntities only comes after XmlIdl so that we cannot use those castor classes. - Clean-up: RemovedIDL compilation of acscourseMount.idl and associated error definition.   The goal is to have several test IDL files that are specific to our module.   Also removed the old no-op "allTests"
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@197556 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/XmlIdl/test/Makefile
+++ b/LGPL/CommonSoftware/XmlIdl/test/Makefile
@@ -40,20 +40,21 @@ DEBUG = on
 # 
 # IDL Files and flags
 # 
-IDL_FILES = xmltest acscourseMount
+IDL_FILES = xmltest
 xmltestStubs_LIBS = acscommonStubs acscomponentStubs
-acscourseMountStubs_LIBS = baciStubs ACSErrTypeCommonStubs ACSErrTypeACSCourseStubs
 
-ACSERRDEF = ACSErrTypeACSCourse
+XML_IDL="ObsProposal=dummyentities.ObsProposal; \
+         SchedBlock=dummyentities.SchedBlock; \
+         ObsProject=dummyentities.ObsProject"
 
 
 #
 # Jarfiles and their directories
 #
 JARFILES = xmlidlTest
-xmlidlTest_DIRS = alma dummyentities
+xmlidlTest_DIRS = alma
 
-SCRIPTS_L = allTests
+SCRIPTS_L = listGeneratedClasses.sh
 
 #>>>>> END OF standard rules
 
@@ -74,6 +75,7 @@ all:	do_all
 	@echo " . . . 'all' done" 
 
 clean : clean_all 
+	$(RM) tatlogs unpacked_jars
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
