- Fixed "JacorbVisitor" to gracefully handle cyclic dependencies.   Previously we threw an exception for cyclic dependencies among interfaces, based on the wrong idea   that we would need 2-pass parsing or delayed updates etc to handle these cycles. Now cycles are just   broken at the right moment, which also works for struct-interface cycles. Xml detection still works.   We had seen this issue in two NRI build failures where a cycle in CharacteristicComponent was involved. - Fixed a bug in struct code generation, which did not take xml offshoot members into account.   Now AcsStructPrinter gets "xmlAwareIFs" passed, and we got some new AcsXmlNamingExpert methods   such as "getClassNameForInterface" (which could also be used by AcsInterfacePrinter). - Test changes:   - Added "xmltest_MutualDep.idl" which specifically tests issues with mutual dependencies,     e.g. among interfaces or between struct and interface.     This IDL file is not yet built by the Makefile because of a remaining code generator bug     (for class XmlOffshootWithStructJ) that would currently let the test build fail.   - We define the fake XmlEntityStruct in its own IDL file "fakexmlentity.idl" instead of locally in xmltest.idl,     to avoid repeating this definition in every test IDL file. Now it just gets included.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@197590 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/XmlIdl/test/Makefile
+++ b/LGPL/CommonSoftware/XmlIdl/test/Makefile
@@ -40,7 +40,8 @@ DEBUG = on
 # 
 # IDL Files and flags
 # 
-IDL_FILES = xmltest
+IDL_FILES = fakexmlentity xmltest 
+#xmltest_MutualDep
 xmltestStubs_LIBS = acscommonStubs acscomponentStubs
 
 XML_IDL="ObsProposal=dummyentities.ObsProposal; \
@@ -75,7 +76,7 @@ all:	do_all
 	@echo " . . . 'all' done" 
 
 clean : clean_all 
-	$(RM) tatlogs unpacked_jars
+	$(RM) tatlogs unpacked_jars .purifydir sed.scan
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
