--- a/LGPL/CommonSoftware/XmlIdl/.classpath
+++ b/LGPL/CommonSoftware/XmlIdl/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
+	<classpathentry excluding="dummyentities/" kind="src" path="test"/>
 	<classpathentry kind="src" path="src_generated"/>
 	<classpathentry kind="var" path="ACSROOT/lib/endorsed/xercesImpl.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/xmljbind.jar"/>
@@ -16,5 +16,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/xmltest.jar" sourcepath="lib/xmltest.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
+	<classpathentry kind="lib" path="lib/dummyentities.jar"/>
+	<classpathentry kind="lib" path="lib/fakexmlentity.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
