re-implemented how and where to look for default QoS XML file  another improvements suggested in: (COMP-7489) Provide bulk data QoS configuration file under $ACSDATA, and allow variants for STEs: - QoS default XML file is now installed in INTROOT/ACSROOT /config and not anymore under $ACSDATA
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@197594 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/bulkDataNT/src/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/src/Makefile
@@ -265,18 +265,10 @@ clean : clean_all dds_clean
 	@echo " . . . clean done"
 
 install : install_all
-	$(AT)cp -f ../config/bulkDataNTDefaultQosProfiles.*.xml $(ACSDATA)/config
-	$(AT)chmod $(P644) $(ACSDATA)/config/bulkDataNTDefaultQosProfiles.*.xml
-	@if [ -f $(ACSDATA)/config/bulkDataNTDefaultQosProfiles.xml ]; then \
-    	rm -rf $(ACSDATA)/config/bulkDataNTDefaultQosProfiles.xml; \
-    fi
-	@if [ -f $(ACSDATA)/config/bulkDataNTDefaultQosProfiles.$(LOCATION).xml ]; then \
-    	ln -s $(ACSDATA)/config/bulkDataNTDefaultQosProfiles.$(LOCATION).xml $(ACSDATA)/config/bulkDataNTDefaultQosProfiles.xml; \
-    else \
-    	ln -s $(ACSDATA)/config/bulkDataNTDefaultQosProfiles.default.xml $(ACSDATA)/config/bulkDataNTDefaultQosProfiles.xml; \
-    fi
+	$(AT)cp -f ../config/bulkDataNTDefaultQosProfiles.*.xml $(PRJTOP)/config
+	$(AT)chmod $(P644) $(PRJTOP)/config/bulkDataNTDefaultQosProfiles.*.xml
 	@echo " . . . installation done"
-
+	
 else
 
 .DEFAULT_GOAL := all	
