Adding test-cases and reference-files to test for the two issues described in ICT-1643 (reporting python compilation errors and unnecessary looping on compilation if a package file has been updated)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@197608 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Kit/acs/test/MakefileInstallTest
+++ b/LGPL/Kit/acs/test/MakefileInstallTest
@@ -83,7 +83,7 @@ lllll_OBJECTS   =
 # Scripts (public and local)
 # ----------------------------
 SCRIPTS         =
-SCRIPTS_L       = acsReplaceTest
+SCRIPTS_L       =
 
 #
 # TCL scripts (public and local)
