- Renamed "xmltest_MutualDep.idl" into "xmltest_dep.idl" and added more test cases about cyclic interface-struct dependencies.   This IDL is compiled as part of the Makefile and its content gets verified in regression testing. - Added "xmltest_dep2.idl" that contains a cyclic dependency among 3 offshoots. This extremely rare setup is not yet handled correctly in XmlIdl.   This is more something to note than a bug, and therefore we simply don't include this IDL in regression testing.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@197666 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/XmlIdl/.classpath
+++ b/LGPL/CommonSoftware/XmlIdl/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry excluding="dummyentities/" kind="src" path="test"/>
+	<classpathentry excluding="dummyentities/|unpacked_jars" kind="src" path="test"/>
 	<classpathentry kind="src" path="src_generated"/>
 	<classpathentry kind="var" path="ACSROOT/lib/endorsed/xercesImpl.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/xmljbind.jar"/>
@@ -18,5 +18,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="lib" path="lib/dummyentities.jar"/>
 	<classpathentry kind="lib" path="lib/fakexmlentity.jar"/>
+	<classpathentry kind="lib" path="lib/xmltest_dep.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
