Fixed unresolved ref C++ build warnings
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@197668 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/XmlIdl/test/Makefile
+++ b/LGPL/CommonSoftware/XmlIdl/test/Makefile
@@ -42,7 +42,8 @@ DEBUG = on
 # 
 IDL_FILES = fakexmlentity xmltest xmltest_dep
 #xmltest_dep2 not yet included here because of 3-group-cycle-bug
-xmltestStubs_LIBS = acscommonStubs acscomponentStubs
+xmltestStubs_LIBS = acscommonStubs acscomponentStubs fakexmlentityStubs
+xmltest_depStubs_LIBS = acscommonStubs acscomponentStubs fakexmlentityStubs
 
 XML_IDL="ObsProposal=dummyentities.ObsProposal; \
          SchedBlock=dummyentities.SchedBlock; \
