ICT-1564: C++ container async callback call fail test (no ref file yet)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@197696 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/maci/ws/test/Makefile
+++ b/LGPL/CommonSoftware/maci/ws/test/Makefile
@@ -100,7 +100,7 @@ maciDynComp_LIBS = maciTestStubs acscomponent archiveevents
 #
 # Scripts (public and local)
 # ----------------------------
-SCRIPTS_L         = startMaciTest.sh startMaciTestClient.sh startContainerWS.sh maciStartStopWrongCDB.sh maciTestLogConfig.sh
+SCRIPTS_L         = startMaciTest.sh startMaciTestClient.sh startContainerWS.sh stopManagerWS.sh maciStartStopWrongCDB.sh maciTestLogConfig.sh
 
 #
 # TCL scripts (public and local)
