ICT-484: added separate script to free ACS_INSTANCE.n dir
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@197732 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsstartup/src/Makefile
+++ b/LGPL/CommonSoftware/acsstartup/src/Makefile
@@ -59,7 +59,8 @@ SCRIPTS         = \
 		acsstartupNotifyPortViaErrorCode \
 		acsLogProcessMem \
 		ifrCacheInvalidate irquery \
-		acsstartupNSRef acsQueryNS
+		acsstartupNSRef acsQueryNS \
+		acsstartupFreeInstanceDir
 
 SCRIPTS_L       =
 
