ICT-1199: Fixed testNumThreadsOption1 tat test to make it more reproducible
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@198260 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsdaemon/ws/test/Makefile
+++ b/LGPL/CommonSoftware/acsdaemon/ws/test/Makefile
@@ -224,7 +224,7 @@ all:	do_all
 
 clean : clean_all 
 	@rm -f *.log 
-	@rm -rf logs
+	@rm -rf logs_NUM_THREADS_OPTION_*
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
