--- a/LGPL/CommonSoftware/XmlIdl/.classpath
+++ b/LGPL/CommonSoftware/XmlIdl/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry excluding="dummyentities/|unpacked_jars" kind="src" path="test"/>
+	<classpathentry excluding="dummyentities/|unpacked_jars/" kind="src" path="test"/>
 	<classpathentry kind="src" path="src_generated"/>
 	<classpathentry kind="var" path="ACSROOT/lib/endorsed/xercesImpl.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/xmljbind.jar"/>
