Fixed jcontexmplClient_JLIBS dependency with EventComponent that shows up from time to time building the module in parallel (ICTJ:ICT-1959)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@198828 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jcontexmpl/src/Makefile
+++ b/LGPL/CommonSoftware/jcontexmpl/src/Makefile
@@ -83,7 +83,7 @@ jcontexmplClient_DIRS = \
 	alma/demo/EventConsumerImpl \
 	alma/acsexmpl/clients
 
-jcontexmplClient_JLIBS= XmlComponent LampCallback
+jcontexmplClient_JLIBS= XmlComponent LampCallback EventComponent
 
 DEBUG = on
 #COMPONENT_HELPERS=on
