--- a/LGPL/CommonSoftware/acsjlog/.classpath
+++ b/LGPL/CommonSoftware/acsjlog/.classpath
@@ -30,5 +30,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/commons-lang-2.5.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/commons-math-2.1.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
