--- a/LGPL/CommonSoftware/acsGUIs/jlog/.classpath
+++ b/LGPL/CommonSoftware/acsGUIs/jlog/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/cdbErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsGUIutil.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
