A script to create and remove the lock file for a given ACS instance (to be used while implementing ICTJ:ICT-734). No test has been implemented yet.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@200898 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsutilpy/src/Makefile
+++ b/LGPL/CommonSoftware/acsutilpy/src/Makefile
@@ -78,7 +78,7 @@ TCL_SCRIPTS_L   =
 #
 # Python stuff (public and local)
 # ----------------------------
-PY_SCRIPTS         =
+PY_SCRIPTS         = acsInstanceLock
 PY_SCRIPTS_L       =
 
 PY_MODULES         =
