Test for AcsutilPy.AcsInstanceLockHelper
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@200972 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsutilpy/test/Makefile
+++ b/LGPL/CommonSoftware/acsutilpy/test/Makefile
@@ -82,7 +82,8 @@ PY_SCRIPTS         =
 PY_SCRIPTS_L       = 	acsutilpyTestFindFile \
 			acsutilpyTestPorts acsutilpyTestCmdLinePorts \
 			acsutilpyTestImport \
-			acsutilpyTestWildcharMatcher
+			acsutilpyTestWildcharMatcher \
+			acsutilpyTestInstanceLocker
 
 PY_MODULES         =
 PY_MODULES_L       =
