Build CERNAlarmTestSender.py in bin instead of invoking the script from python.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@201703 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-source-python/test/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/laser-source-python/test/Makefile
@@ -32,7 +32,8 @@
 # jagonzal: Remove non-existing test_all target
 PY_SCRIPTS_L       = test_CERNAlarmSystemInterfaceProxy \
                      test_CERNAlarmSystemInterfaceProxy_AlarmPublisher.py \
-
+					 CERNAlarmTestSender
+					 
 PY_PACKAGES_L      = UnitTests
 
 
