Refactored - but still not working :-(
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@201718 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/containerTests/contHandleTest/test/Makefile
+++ b/LGPL/CommonSoftware/containerTests/contHandleTest/test/Makefile
@@ -66,8 +66,8 @@ lllll_OBJECTS   =
 #
 # Scripts (public and local)
 # ----------------------------
-SCRIPTS         =
-SCRIPTS_L       = doAllTests
+SCRIPTS         = 
+SCRIPTS_L       = doAllTests contHandlerTatTestPrologue
 
 #
 # TCL scripts (public and local)
@@ -191,6 +191,7 @@ endif
 # TARGETS
 # -------
 all:	do_all
+	@mkdir -p tmp
 	@echo " . . . 'all' done" 
 
 clean : clean_all
