--- a/LGPL/CommonSoftware/containerTests/contHandleTest/.classpath
+++ b/LGPL/CommonSoftware/containerTests/contHandleTest/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry excluding="lc.jar.extras/" kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="var" path="JACORB_HOME/lib/jacorb.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/jcont.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
