ACSBulkDataError error definition moved from bulkData to bulkDataNT
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@203672 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/bulkData/src/Makefile
+++ b/LGPL/CommonSoftware/bulkData/src/Makefile
@@ -149,7 +149,7 @@ bulkDataSenderStubs_LIBS = baciStubs ACSBulkDataError bulkDataStubs bulkDataRece
 bulkDataDistributerStubs_LIBS = baciStubs ACSErrTypeCommon ACSBulkDataError bulkDataStubs bulkDataReceiverStubs bulkDataSenderStubs
 
 #ACS Error System target
-ACSERRDEF = ACSBulkDataError ACSBulkDataStatus
+ACSERRDEF = ACSBulkDataStatus
 
 #
 # Jarfiles and their directories
