--- a/LGPL/CommonSoftware/bulkDataNT/src/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/src/Makefile
@@ -195,7 +195,7 @@ JARFILES=
 jjj_DIRS=
 jjj_EXTRAS= 
 
-ACSERRDEF = ACS_BD_Errors ACS_DDS_Errors
+ACSERRDEF = ACS_BD_Errors ACS_DDS_Errors ACSBulkDataError
 
 
 #
