ACSBulkDataStatus error definition moved from bulkData to bulkDataNT
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@203674 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/bulkData/src/Makefile
+++ b/LGPL/CommonSoftware/bulkData/src/Makefile
@@ -145,7 +145,7 @@ IDL_FILES =
 IDL_TAO_FLAGS =
 
 #ACS Error System target
-ACSERRDEF = ACSBulkDataStatus
+ACSERRDEF = 
 
 #
 # Jarfiles and their directories
