Re-enabled the compilation for java
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@204439 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/bulkDataNT/src/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/src/Makefile
@@ -33,7 +33,7 @@
 #------------------------------------------------------------------------
 
 # at this moment we use bulk data (NT) just in C++, and there is just C++ implementation
-MAKE_ONLY=C++,Python
+#MAKE_ONLY=C++,Python
 MAKE_NOIFR_CHECK = on # it is DDS IDL, and we do not need to check it
 
 ARCH = $(shell uname -m)
