added testMultiThreads that helps to investigate: [ICT] (ICT-782) Incorrect time stamp is added to a message by LOG_TO_DEVELOPER
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@205505 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/logging/ws/test/Makefile
+++ b/LGPL/CommonSoftware/logging/ws/test/Makefile
@@ -58,7 +58,7 @@
 EXECUTABLES     = 	
 EXECUTABLES_L   = 	testLogger testNoLogging testMacros \
 			loggingXMLParserTest testGenericLogger testLoggable testLoggingProxy \
-            testAnyLog testAUD_ARR testLog4cpp testIsInitThread
+            testAnyLog testAUD_ARR testLog4cpp testIsInitThread testMultiThreads
 
 loggingXMLParserTest_OBJECTS = loggingXMLParserTest
 loggingXMLParserTest_LIBS = logging
@@ -92,6 +92,9 @@ testLog4cpp_LIBS   = logging maciClient acserr
 
 testIsInitThread_OBJECTS= testIsInitThread
 testIsInitThread_LIBS	= logging
+
+testMultiThreads_OBJECTS= testMultiThreads
+testMultiThreads_LIBS	= logging
 
 #
 # <brief description of xxxxx program>
